# platform-connectors

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yaml
src/platform_connectors/: __init__.py  confluenceclient.py  gitlabclient.py  httpclient.py  jiraclient.py
tests/: test_confluenceclient.py  test_gitlabclient.py  test_httpclient.py  test_jiraclient.py
