[tool.poetry]
name = "platform-connectors"
version = "0.0.0"
description = "Reusable API connectors for Jira, GitLab, and Confluence"
authors = ["Christophe Le Douarec <ledouarec@gmail.com>"]
readme = "README.md"
repository = "https://github.com/cledouarec/platform-connectors"
license = "Apache-2.0"
keywords = ["connectors", "jira", "gitlab", "confluence", "api", "async"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries",
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.11.11"
aiofiles = "^25.1.0"
limiter = "^0.5.0"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.9"
pre-commit = "^4.5.1"
pylint = "^4.0.4"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
ruff = "^0.14.10"

[build-system]
requires = ["poetry-core==2.1.2"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
version_files = [
    "src/platform_connectors/__init__.py:__version__",
    "pyproject.toml:^version"
]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[tool.ruff]
target-version = "py311"
line-length = 79

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "ANN",   # flake8-annotations (too noisy)
    "BLE",   # blind except
    "FBT",   # boolean traps
    "CPY",   # copyright headers
    "PL",    # pylint
    "TRY",   # tryceratops
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP001", "S101"]